[package]
name = "line-server"
version = "0.1.0"
edition = "2021"

[dependencies]
# Websocket libraries
tokio = {version = "1.38.0", features = ["full"]}
tokio-tungstenite = "0.23.0"
futures-util = "0.3.30"

# Database 
duckdb = {version = "0.10.2", features = ["bundled"]}
arrow = { version = "*", default-features = false, features = ["prettyprint"] }

# Progress bar
zzz = "0.3.1"

# Logging 
spdlog-rs = "0.3.13"